finished authentication and added exceptions

--- a/app/views/Application/register.html
+++ b/app/views/Application/register.html
@@ -9,11 +9,11 @@
         <br>
 
         <label>First name:</label>
-        <input type="text" name="firstname" />
+        <input type="text" name="firstName" />
         <br>
 
         <label>Last name:</label>
-        <input type="text" name="lastname" />
+        <input type="text" name="lastName" />
         <br>
 
         <label>Birthday:</label>
