created contact model and fixed session

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,5 +1,5 @@
 #{extends 'main.html' /}
 
-<h3>Welcome, ${email}!</h3>
+<h3>Welcome to the top secret members page!</h3>
  
 <a href="@{Application.logout()}">Logout</a>
